[package]
name = "airquality"
version = "0.1.0"
authors = ["mjwilson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.12.0"
dialoguer = "0.6.2"
indicatif = "0.15.0"
rand = "0.7.3"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
json = "0.12.4"